--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -102,8 +102,9 @@
                         app:layout_constraintTop_toBottomOf="@+id/checkingTextView" />
 
                     <androidx.core.widget.NestedScrollView
+                        android:id="@+id/nestedScrollView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="400dp"
                         android:layout_marginTop="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/searchView"
@@ -123,7 +124,6 @@
                                 android:textSize="12sp"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
-
                             <LinearLayout
                                 android:id="@+id/linearLayout2"
                                 android:layout_width="wrap_content"
@@ -136,59 +136,68 @@
 
                                 <androidx.constraintlayout.widget.ConstraintLayout
                                     android:layout_width="wrap_content"
-                                    android:layout_height="match_parent">
+                                    android:layout_height="match_parent"
+                                    android:id="@+id/popularBanksConstraintLayout1"
+                                    android:layout_marginEnd="16dp">
 
                                     <ImageView
-                                        android:id="@+id/imageView14"
-                                        android:layout_width="50dp"
-                                        android:layout_height="50dp"
+                                        android:id="@+id/popularBanksImageView1"
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        android:padding="2dp"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent"
-                                        app:srcCompat="@drawable/icici" />
-
-                                    <TextView
-                                        android:id="@+id/popularWalletNameTextView"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginTop="8dp"
-                                        android:fontFamily="@font/poppins"
-                                        android:text="ICICI"
-                                        android:textColor="#383838"
-                                        app:layout_constraintEnd_toEndOf="parent"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
+                                        app:layout_constraintTop_toTopOf="parent" />
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                                 <androidx.constraintlayout.widget.ConstraintLayout
                                     android:layout_width="wrap_content"
-                                    android:layout_height="match_parent">
+                                    android:layout_height="match_parent"
+                                    android:id="@+id/popularBanksConstraintLayout2"
+                                    android:layout_marginEnd="16dp">
 
                                     <ImageView
-                                        android:id="@+id/imageView19"
-                                        android:layout_width="50dp"
-                                        android:layout_height="50dp"
-                                        android:layout_marginStart="14dp"
-                                        android:layout_marginEnd="14dp"
+                                        android:id="@+id/popularBanksImageView2"
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent"
-                                        app:srcCompat="@drawable/sbi" />
+                                        app:layout_constraintTop_toTopOf="parent" />
 
-                                    <TextView
-                                        android:id="@+id/textView23"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginTop="8dp"
-                                        android:fontFamily="@font/poppins"
-                                        android:text="SBI"
-                                        android:textColor="#383838"
+                                </androidx.constraintlayout.widget.ConstraintLayout>
+                                <androidx.constraintlayout.widget.ConstraintLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:id="@+id/popularBanksConstraintLayout3"
+                                    android:layout_marginEnd="16dp">
+
+                                    <ImageView
+                                        android:id="@+id/popularBanksImageView3"
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toBottomOf="@+id/imageView19" />
+                                        app:layout_constraintTop_toTopOf="parent" />
+
+                                </androidx.constraintlayout.widget.ConstraintLayout>
+                                <androidx.constraintlayout.widget.ConstraintLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:id="@+id/popularBanksConstraintLayout4"
+                                    android:layout_marginEnd="16dp">
+
+                                    <ImageView
+                                        android:id="@+id/popularBanksImageView4"
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toTopOf="parent" />
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                             </LinearLayout>
+
+
 
                             <TextView
                                 android:id="@+id/textView24"
@@ -197,14 +206,15 @@
                                 android:layout_marginTop="16dp"
                                 android:fontFamily="@font/poppins_semibold"
                                 android:text="All Banks"
-                                android:textSize="12sp"
                                 android:textColor="#2D2B32"
+                                android:textSize="12sp"
                                 app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/banksRecyclerView"
                                 android:layout_width="match_parent"
-                                android:layout_height="160dp"
+                                android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
                                 app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                                 app:layout_constraintTop_toBottomOf="@+id/textView24"
@@ -216,13 +226,90 @@
 
                     </androidx.core.widget.NestedScrollView>
 
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/errorField"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView">
+
+                        <ImageView
+                            android:id="@+id/imageView5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="2dp"
+                            android:src="@drawable/error_outline"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+                        <TextView
+                            android:id="@+id/textView4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:enabled="false"
+                            android:fontFamily="@font/poppins"
+                            android:gravity="center"
+                            android:text="Invalid UPI ID. Please check and retry.  "
+                            android:textColor="#B9232F"
+                            android:textSize="12sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/imageView5"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/proceedButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:clickable="true"
+                app:cardCornerRadius="7dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardView">
 
+                <RelativeLayout
+                    android:id="@+id/proceedButtonRelativeLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/disable_button_bg"
+                    android:padding="12dp">
+
+                    <ProgressBar
+                        android:id="@+id/progressBar"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_centerInParent="true"
+                        android:indeterminateDrawable="@drawable/loader_01"
+                        android:rotation="90" />
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="Verify and Proceed Payment"
+                        android:textColor="#ADACB0"
+                        android:textSize="16sp" />
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
