--- a/Tray/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -135,18 +135,21 @@
                             android:textSize="14sp"
                             tools:ignore="TouchTargetSizeCheck" />
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/invalidCardValidity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical|top"
-                            android:orientation="horizontal">
+                            android:gravity="center_vertical|top">
 
                             <ImageView
                                 android:id="@+id/imageView6"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/error_outline" />
+                                android:src="@drawable/error_outline"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/textView7"
+                                app:layout_constraintBottom_toBottomOf="@+id/textView7"
+                                android:layout_marginBottom="3dp"/>
 
                             <TextView
                                 android:id="@+id/textView7"
@@ -156,11 +159,14 @@
                                 android:enabled="false"
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical|left"
-                                android:text="Invalid card validity.\nPlease check"
+                                android:text="Invalid card validity"
                                 android:textColor="#B9232F"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                app:layout_constraintStart_toEndOf="@+id/imageView6"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
 
-                        </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -200,32 +206,37 @@
                             android:textSize="14sp"
                             tools:ignore="TouchTargetSizeCheck" />
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/invalidCVV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical|top"
-                            android:orientation="horizontal">
+                            android:gravity="center_vertical|top">
 
                             <ImageView
                                 android:id="@+id/imageView7"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:src="@drawable/error_outline" />
+                                android:layout_height="20dp"
+                                android:src="@drawable/error_outline"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintBottom_toBottomOf="@+id/textView8"
+                                app:layout_constraintTop_toTopOf="@+id/textView8"
+                                android:layout_marginBottom="3dp"/>
 
                             <TextView
                                 android:id="@+id/textView8"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="2dp"
+                                android:layout_height="20dp"
                                 android:enabled="false"
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center"
                                 android:text="Invalid CVV"
                                 android:textColor="#B9232F"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                app:layout_constraintStart_toEndOf="@+id/imageView7"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
 
-                        </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </LinearLayout>
 
 
@@ -356,7 +367,7 @@
 
                         </LinearLayout>
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/ll1InvalidCardNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -369,7 +380,11 @@
                                 android:id="@+id/imageView5"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/error_outline" />
+                                android:src="@drawable/error_outline"
+                                android:layout_marginBottom="3dp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/textView4"
+                                app:layout_constraintBottom_toBottomOf="@+id/textView4"/>
 
                             <TextView
                                 android:id="@+id/textView4"
@@ -381,9 +396,12 @@
                                 android:gravity="center"
                                 android:text="Invalid Card Number. Please check and retry.  "
                                 android:textColor="#B9232F"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toEndOf="@+id/imageView5"/>
 
-                        </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </LinearLayout>
 
 
