--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -144,7 +144,7 @@
                                 android:layout_marginStart="14dp"
                                 android:layout_marginTop="8dp"
                                 android:layout_marginEnd="14dp"
-                                android:visibility="gone"
+                                android:visibility="visible"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/numberOfItems"
@@ -162,7 +162,7 @@
                                 android:text="Total"
                                 android:textColor="#010102"
                                 android:textSize="12sp"
-                                android:visibility="gone"
+                                android:visibility="visible"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="@+id/itemsInOrderRecyclerView"
                                 app:layout_constraintTop_toBottomOf="@+id/itemsInOrderRecyclerView" />
@@ -172,10 +172,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/poppins_semibold"
-                                android:text="₹1198.00"
+                                android:text="₹698.00"
                                 android:textColor="#010102"
                                 android:textSize="18sp"
-                                android:visibility="gone"
+                                android:visibility="visible"
                                 app:layout_constraintBottom_toBottomOf="@+id/textView18"
                                 app:layout_constraintEnd_toEndOf="@+id/itemsInOrderRecyclerView"
                                 app:layout_constraintTop_toTopOf="@+id/textView18" />
